versions/0.9.0/_sources/refs/_aws-cdk_aws-sqs.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"z9fyTaqGymwsEXeqb0ufNcaqk/XMJZAZi5NvJhpwTFU="}

@aws-cdk/aws-sqs
================

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.AWS.SQS/0.9.0>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.AWS.SQS" Version="0.9.0" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.AWS.SQS --version 0.9.0

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.AWS.SQS" version="0.9.0" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/sqs/0.9.0/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:sqs:jar:0.9.0'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="sqs" rev="0.9.0"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>sqs</artifactId>
           <version>0.9.0</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:sqs:0.9.0'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='sqs', version='0.9.0')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-sqs/v/0.9.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-sqs@0.9.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-sqs": "^0.9.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-sqs@0.9.0


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-sqs/v/0.9.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-sqs@0.9.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-sqs": "^0.9.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-sqs@0.9.0



.. mdinclude:: ./__aws-cdk_aws-sqs.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-sqs

DeadLetterQueue (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: DeadLetterQueue

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SQS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sqs.DeadLetterQueue;

      .. code-tab:: javascript

         // DeadLetterQueue is an interface

      .. code-tab:: typescript

         import { DeadLetterQueue } from '@aws-cdk/aws-sqs';



   Dead letter queue settings




   .. py:attribute:: maxReceiveCount

      The number of times a message can be unsuccesfully dequeued before being moved to the dead-letter queue.


      :type: number


   .. py:attribute:: queue

      The dead-letter queue to which Amazon SQS moves messages after the value of maxReceiveCount is exceeded.


      :type: :py:class:`~@aws-cdk/aws-sqs.QueueRef`


Queue
^^^^^

.. py:class:: Queue(parent, name, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SQS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sqs.Queue;

      .. code-tab:: javascript

         const { Queue } = require('@aws-cdk/aws-sqs');

      .. code-tab:: typescript

         import { Queue } from '@aws-cdk/aws-sqs';



   A new Amazon SQS queue


   :extends: :py:class:`~@aws-cdk/aws-sqs.QueueRef`
   :param parent: 
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: 
   :type name: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-sqs.QueueProps`

   .. py:attribute:: autoCreatePolicy

      Controls automatic creation of policy objects.  Set by subclasses.


      :type: boolean *(readonly)*


   .. py:attribute:: queueArn

      The ARN of this queue


      :type: :py:class:`~@aws-cdk/aws-sqs.QueueArn` *(readonly)*


   .. py:attribute:: queueName

      The name of this queue


      :type: :py:class:`~@aws-cdk/aws-sqs.QueueName` *(readonly)*


   .. py:attribute:: queueUrl

      The URL of this queue


      :type: :py:class:`~@aws-cdk/aws-sqs.QueueUrl` *(readonly)*


   .. py:attribute:: encryptionMasterKey

      If this queue is encrypted, this is the KMS key.


      :type: :py:class:`@aws-cdk/aws-kms.EncryptionKeyRef` or undefined *(readonly)*


QueueArn
^^^^^^^^

.. py:class:: QueueArn(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SQS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sqs.QueueArn;

      .. code-tab:: javascript

         const { QueueArn } = require('@aws-cdk/aws-sqs');

      .. code-tab:: typescript

         import { QueueArn } from '@aws-cdk/aws-sqs';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

QueueEncryption (enum)
^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: QueueEncryption

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SQS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sqs.QueueEncryption;

      .. code-tab:: javascript

         const { QueueEncryption } = require('@aws-cdk/aws-sqs');

      .. code-tab:: typescript

         import { QueueEncryption } from '@aws-cdk/aws-sqs';



   What kind of encryption to apply to this queue


   .. py:data:: Unencrypted

   Messages in the queue are not encrypted


   .. py:data:: KmsManaged

   Server-side KMS encryption with a master key managed by SQS.


   .. py:data:: Kms

   Server-side encryption with a KMS key managed by the user.  If `encryptionKey` is specified, this key will be used, otherwise, one will be defined.



QueueName
^^^^^^^^^

.. py:class:: QueueName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SQS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sqs.QueueName;

      .. code-tab:: javascript

         const { QueueName } = require('@aws-cdk/aws-sqs');

      .. code-tab:: typescript

         import { QueueName } from '@aws-cdk/aws-sqs';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

QueuePolicy
^^^^^^^^^^^

.. py:class:: QueuePolicy(parent, name, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SQS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sqs.QueuePolicy;

      .. code-tab:: javascript

         const { QueuePolicy } = require('@aws-cdk/aws-sqs');

      .. code-tab:: typescript

         import { QueuePolicy } from '@aws-cdk/aws-sqs';



   Applies a policy to SQS queues.


   :extends: :py:class:`@aws-cdk/cdk.Construct`
   :implements: :py:class:`@aws-cdk/cdk.IDependable`
   :param parent: 
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: 
   :type name: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-sqs.QueuePolicyProps`

   .. py:attribute:: dependencyElements

      Allows adding QueuePolicy as a dependency.


      :type: :py:class:`@aws-cdk/cdk.IDependable`[] *(readonly)*


   .. py:attribute:: document

      The IAM policy document for this policy.


      :type: :py:class:`@aws-cdk/cdk.PolicyDocument` *(readonly)*


QueuePolicyProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: QueuePolicyProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SQS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sqs.QueuePolicyProps;

      .. code-tab:: javascript

         // QueuePolicyProps is an interface

      .. code-tab:: typescript

         import { QueuePolicyProps } from '@aws-cdk/aws-sqs';





   .. py:attribute:: queues

      The set of queues this policy applies to.


      :type: :py:class:`~@aws-cdk/aws-sqs.QueueRef`[]


QueueProps (interface)
^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: QueueProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SQS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sqs.QueueProps;

      .. code-tab:: javascript

         // QueueProps is an interface

      .. code-tab:: typescript

         import { QueueProps } from '@aws-cdk/aws-sqs';



   Properties for creating a new Queue




   .. py:attribute:: contentBasedDeduplication

      Specifies whether to enable content-based deduplication.  During the deduplication interval (5 minutes), Amazon SQS treats messages that are sent with identical content (excluding attributes) as duplicates and delivers only one copy of the message.  If you don't enable content-based deduplication and you want to deduplicate messages, provide an explicit deduplication ID in your SendMessage() call.  (Only applies to FIFO queues.)


      :type: boolean or undefined


   .. py:attribute:: dataKeyReuseSec

      The length of time that Amazon SQS reuses a data key before calling KMS again.  The value must be an integer between 60 (1 minute) and 86,400 (24 hours). The default is 300 (5 minutes).


      :type: number or undefined


   .. py:attribute:: deadLetterQueue

      Send messages to this queue if they were unsuccessfully dequeued a number of times.


      :type: :py:class:`~@aws-cdk/aws-sqs.DeadLetterQueue` or undefined


   .. py:attribute:: deliveryDelaySec

      The time in seconds that the delivery of all messages in the queue is delayed.  You can specify an integer value of 0 to 900 (15 minutes). The default value is 0.


      :type: number or undefined


   .. py:attribute:: encryption

      Whether the contents of the queue are encrypted, and by what type of key.  Be aware that encryption is not available in all regions, please see the docs for current availability details.


      :type: :py:class:`~@aws-cdk/aws-sqs.QueueEncryption` or undefined


   .. py:attribute:: encryptionMasterKey

      External KMS master key to use for queue encryption.  Individual messages will be encrypted using data keys. The data keys in turn will be encrypted using this key, and reused for a maximum of `dataKeyReuseSecs` seconds.  The 'encryption' property must be either not specified or set to "Kms". An error will be emitted if encryption is set to "Unencrypted" or "KmsManaged".


      :type: :py:class:`@aws-cdk/aws-kms.EncryptionKeyRef` or undefined


   .. py:attribute:: fifo

      Whether this a first-in-first-out (FIFO) queue.


      :type: boolean or undefined


   .. py:attribute:: maxMessageSizeBytes

      The limit of how many bytes that a message can contain before Amazon SQS rejects it.  You can specify an integer value from 1024 bytes (1 KiB) to 262144 bytes (256 KiB). The default value is 262144 (256 KiB).


      :type: number or undefined


   .. py:attribute:: queueName

      A name for the queue.  If specified and this is a FIFO queue, must end in the string '.fifo'.


      :type: string or undefined


   .. py:attribute:: receiveMessageWaitTimeSec

      Default wait time for ReceiveMessage calls.  Does not wait if set to 0, otherwise waits this amount of seconds by default for messages to arrive.  For more information, see Amazon SQS Long Poll.    


      :type: number or undefined


   .. py:attribute:: retentionPeriodSec

      The number of seconds that Amazon SQS retains a message.  You can specify an integer value from 60 seconds (1 minute) to 1209600 seconds (14 days). The default value is 345600 seconds (4 days).


      :type: number or undefined


   .. py:attribute:: visibilityTimeoutSec

      Timeout of processing a single message.  After dequeuing, the processor has this much time to handle the message and delete it from the queue before it becomes visible again for dequeueing by another processor.  Values must be from 0 to 43200 seconds (12 hours). If you don't specify a value, AWS CloudFormation uses the default value of 30 seconds.


      :type: number or undefined


QueueRef
^^^^^^^^

.. py:class:: QueueRef(parent, id)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SQS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sqs.QueueRef;

      .. code-tab:: javascript

         const { QueueRef } = require('@aws-cdk/aws-sqs');

      .. code-tab:: typescript

         import { QueueRef } from '@aws-cdk/aws-sqs';



   Reference to a new or existing Amazon SQS queue


   :extends: :py:class:`@aws-cdk/cdk.Construct`
   :implements: :py:class:`@aws-cdk/aws-s3-notifications.IBucketNotificationDestination`
   :abstract: Yes
   :param parent: The parent construct
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param id: 
   :type id: string

   .. py:staticmethod:: import(parent, name, props)

      Import an existing queue


      :param parent: 
      :type parent: :py:class:`@aws-cdk/cdk.Construct`
      :param name: 
      :type name: string
      :param props: 
      :type props: :py:class:`~@aws-cdk/aws-sqs.QueueRefProps`


   .. py:method:: addToResourcePolicy(statement)

      Adds a statement to the IAM resource policy associated with this queue.  If this queue was created in this stack (`new Queue`), a queue policy will be automatically created upon the first call to `addToPolicy`. If the queue is improted (`Queue.import`), then this is a no-op.


      :param statement: 
      :type statement: :py:class:`@aws-cdk/cdk.PolicyStatement`


   .. py:method:: asBucketNotificationDestination(bucketArn, bucketId) -> @aws-cdk/aws-s3-notifications.BucketNotificationDestinationProps

      Allows using SQS queues as destinations for bucket notifications. Use `bucket.onEvent(event, queue)` to subscribe.


      :param bucketArn: The ARN of the notifying bucket.
      :type bucketArn: :py:class:`@aws-cdk/cdk.Arn`
      :param bucketId: A unique ID for the notifying bucket.
      :type bucketId: string
      :rtype: :py:class:`@aws-cdk/aws-s3-notifications.BucketNotificationDestinationProps`


   .. py:method:: export() -> @aws-cdk/aws-sqs.QueueRefProps

      Export a queue


      :rtype: :py:class:`~@aws-cdk/aws-sqs.QueueRefProps`


   .. py:attribute:: autoCreatePolicy

      Controls automatic creation of policy objects.  Set by subclasses.


      :type: boolean *(readonly)* *(abstract)*


   .. py:attribute:: queueArn

      The ARN of this queue


      :type: :py:class:`~@aws-cdk/aws-sqs.QueueArn` *(readonly)* *(abstract)*


   .. py:attribute:: queueUrl

      The URL of this queue


      :type: :py:class:`~@aws-cdk/aws-sqs.QueueUrl` *(readonly)* *(abstract)*


   .. py:attribute:: encryptionMasterKey

      If this queue is server-side encrypted, this is the KMS encryption key.


      :type: :py:class:`@aws-cdk/aws-kms.EncryptionKeyRef` or undefined *(readonly)* *(abstract)*


QueueRefProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: QueueRefProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SQS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sqs.QueueRefProps;

      .. code-tab:: javascript

         // QueueRefProps is an interface

      .. code-tab:: typescript

         import { QueueRefProps } from '@aws-cdk/aws-sqs';



   Reference to a queue




   .. py:attribute:: queueArn

      The ARN of the queue.


      :type: :py:class:`~@aws-cdk/aws-sqs.QueueArn`


   .. py:attribute:: queueUrl

      The URL of the queue.


      :type: :py:class:`~@aws-cdk/aws-sqs.QueueUrl`


   .. py:attribute:: keyArn

      KMS encryption key, if this queue is server-side encrypted by a KMS key.


      :type: :py:class:`@aws-cdk/aws-kms.KeyArn` or undefined


QueueUrl
^^^^^^^^

.. py:class:: QueueUrl(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SQS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sqs.QueueUrl;

      .. code-tab:: javascript

         const { QueueUrl } = require('@aws-cdk/aws-sqs');

      .. code-tab:: typescript

         import { QueueUrl } from '@aws-cdk/aws-sqs';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-sqs.cloudformation

QueuePolicyResource
~~~~~~~~~~~~~~~~~~~

.. py:class:: QueuePolicyResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SQS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sqs.cloudformation.QueuePolicyResource;

      .. code-tab:: javascript

         const { cloudformation.QueuePolicyResource } = require('@aws-cdk/aws-sqs');

      .. code-tab:: typescript

         import { cloudformation.QueuePolicyResource } from '@aws-cdk/aws-sqs';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``QueuePolicyResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``QueuePolicyResource``
   :type properties: :py:class:`~@aws-cdk/aws-sqs.cloudformation.QueuePolicyResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


QueuePolicyResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: QueuePolicyResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SQS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sqs.cloudformation.QueuePolicyResourceProps;

      .. code-tab:: javascript

         // cloudformation.QueuePolicyResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.QueuePolicyResourceProps } from '@aws-cdk/aws-sqs';





   .. py:attribute:: policyDocument

      ``AWS::SQS::QueuePolicy.PolicyDocument``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sqs-policy.html#cfn-sqs-queuepolicy-policydoc


      :type: json or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: queues

      ``AWS::SQS::QueuePolicy.Queues``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sqs-policy.html#cfn-sqs-queuepolicy-queues


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[]


QueueResource
~~~~~~~~~~~~~

.. py:class:: QueueResource(parent, name, [properties])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SQS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sqs.cloudformation.QueueResource;

      .. code-tab:: javascript

         const { cloudformation.QueueResource } = require('@aws-cdk/aws-sqs');

      .. code-tab:: typescript

         import { cloudformation.QueueResource } from '@aws-cdk/aws-sqs';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``QueueResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``QueueResource``
   :type properties: :py:class:`~@aws-cdk/aws-sqs.cloudformation.QueueResourceProps` or undefined

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: queueArn

      :type: :py:class:`~@aws-cdk/aws-sqs.QueueArn` *(readonly)*


   .. py:attribute:: queueName

      :type: :py:class:`~@aws-cdk/aws-sqs.QueueName` *(readonly)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-sqs.QueueUrl` *(readonly)*


QueueResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: QueueResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SQS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sqs.cloudformation.QueueResourceProps;

      .. code-tab:: javascript

         // cloudformation.QueueResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.QueueResourceProps } from '@aws-cdk/aws-sqs';





   .. py:attribute:: contentBasedDeduplication

      ``AWS::SQS::Queue.ContentBasedDeduplication``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sqs-queues.html#aws-sqs-queue-contentbaseddeduplication


      :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: delaySeconds

      ``AWS::SQS::Queue.DelaySeconds``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sqs-queues.html#aws-sqs-queue-delayseconds


      :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: fifoQueue

      ``AWS::SQS::Queue.FifoQueue``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sqs-queues.html#aws-sqs-queue-fifoqueue


      :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: kmsDataKeyReusePeriodSeconds

      ``AWS::SQS::Queue.KmsDataKeyReusePeriodSeconds``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sqs-queues.html#aws-sqs-queue-kmsdatakeyreuseperiodseconds


      :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: kmsMasterKeyId

      ``AWS::SQS::Queue.KmsMasterKeyId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sqs-queues.html#aws-sqs-queue-kmsmasterkeyid


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: maximumMessageSize

      ``AWS::SQS::Queue.MaximumMessageSize``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sqs-queues.html#aws-sqs-queue-maxmesgsize


      :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: messageRetentionPeriod

      ``AWS::SQS::Queue.MessageRetentionPeriod``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sqs-queues.html#aws-sqs-queue-msgretentionperiod


      :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: queueName

      ``AWS::SQS::Queue.QueueName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sqs-queues.html#aws-sqs-queue-name


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: receiveMessageWaitTimeSeconds

      ``AWS::SQS::Queue.ReceiveMessageWaitTimeSeconds``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sqs-queues.html#aws-sqs-queue-receivemsgwaittime


      :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: redrivePolicy

      ``AWS::SQS::Queue.RedrivePolicy``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sqs-queues.html#aws-sqs-queue-redrive


      :type: json or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: tags

      ``AWS::SQS::Queue.Tags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sqs-queues.html#cfn-sqs-queue-tags


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`@aws-cdk/cdk.Tag`)[] or undefined


   .. py:attribute:: visibilityTimeout

      ``AWS::SQS::Queue.VisibilityTimeout``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sqs-queues.html#aws-sqs-queue-visiblitytimeout


      :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined



.. py:currentmodule:: @aws-cdk/aws-sqs

